2005-11-28  Edward Hervey  <edward@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_init),
	(try_to_link_1), (queue_filled_cb):
	Better use of the queues. Start with a small size queue and only increase
	the size of the queues when the other queues are empty.

2005-11-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/video/Makefile.am:
	  compile in copied-over videofilter into the video library
	* gst-libs/gst/video/videosink.h:
	  rename the header to gstvideosink.h since it's a base GstObject class
	* sys/ximage/ximagesink.h:
	* sys/xvimage/xvimagesink.h:
	  use the new header

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (group_commit), (probe_triggered):
	* gst/playback/gstplaybasebin.h:
	Prepare to handle errors betters.

	* gst/playback/gstplaybin.c: (add_sink), (setup_sinks):
	Set sinks to PAUSED first before adding and linking them so that
	we don't interrupt dataflow.

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/TODO:
	Updated TODO

	* gst-libs/gst/audio/gstaudiosink.c:
	(gst_audioringbuffer_open_device),
	(gst_audioringbuffer_close_device), (gst_audioringbuffer_acquire),
	(gst_audioringbuffer_release):
	Small cleanups.

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init), (gst_base_audio_sink_render),
	(gst_base_audio_sink_change_state):
	Slave to the master clock when going to PLAYING and unslave when
	going to PAUSED.

	* gst-libs/gst/audio/gstringbuffer.c:
	(gst_ring_buffer_open_device), (gst_ring_buffer_close_device),
	(gst_ring_buffer_acquire), (gst_ring_buffer_release),
	(gst_ring_buffer_samples_done), (gst_ring_buffer_set_sample),
	(gst_ring_buffer_clear_all), (wait_segment),
	(gst_ring_buffer_commit), (gst_ring_buffer_read),
	(gst_ring_buffer_advance):
	* gst-libs/gst/audio/gstringbuffer.h:
	Add some docs and cleanups.

2005-11-28  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c: